--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "description": "API to store Contacts",
   "main": "src/index.js",
   "author": "Vittor Emanoel",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
