--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "main": "src/index.js",
   "author": "Vittor Emanoel",
   "license": "MIT",
+  "scripts": {
+    "dev": "nodemon src/index.js"
+  },
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
