--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
         "ecmaVersion": "latest"
     },
     "rules": {
-        "space-before-function-paren" :"off"
+        "space-before-function-paren" :"off",
+        "comma-dangle" :"off"
     }
 }
