--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,7 @@
     },
     "rules": {
         "space-before-function-paren" :"off",
-        "comma-dangle" :"off"
+        "comma-dangle" :"off",
+        "prefer-const": "off"
     }
 }
