--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,6 @@
         "space-before-function-paren" :"off",
         "comma-dangle" :"off",
         "prefer-const": "off",
-        "camelcase": "off"
+        "camelcase": "off",
     }
 }
