--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon src/index.js",
-    "vercel-build" : "src/database"
+    "vercel-build" : "src/database/schema.sql"
   },
   "dependencies": {
     "express": "^4.18.2",
