--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon src/index.js",
-    "vercel-build" : "src/database/schema.sql"
+    "vercel-build": "src/database/schema.sql"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^0.2.9",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "pg": "^8.9.0"
