--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgres://Vittor-Emanoel:7BPisgzqcG4N@ep-delicate-block-399797.us-east-2.aws.neon.tech/neondb
+DATABASE_URL=postgres://Vittor-Emanoel:7BPisgzqcG4N@ep-delicate-block-399797.us-east-2.aws.neon.tech/mycontacts
