--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "author": "Vittor Emanoel",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/index.js",
-    "vercel-build" : "src/database/schema.sql"
+    "dev": "nodemon src/index.js"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^0.2.9",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "pg": "^8.9.0"
